# haskell-project-skeleton

./: .ghci  .ghcid  .gitignore  LICENSE  README.md  ghcid-lib.sh  ghcid-spec.sh  haskell-project-skeleton.cabal  shell.nix
src/: Lib.hs
tests/: Spec.hs
